--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,7 +24,7 @@ body{
 
 .header li img{
     width: 3.9vw;
-    margin-top: -15px;
+    margin-top: -20px;
 }
 .header .active{
     
@@ -122,7 +122,7 @@ body{
 }
 
 .photo img{
-    width: 100vw;
+    width: 100%;
     height: 50vw;
     overflow: hidden;
     display: flex;
@@ -131,3 +131,17 @@ body{
     background-color: #fff;
 
 }
+
+.mid{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin-top: 1.5vw;
+    margin-bottom: 1.5vw;
+
+}
+
+.mid h3{
+    font-size: 2.5vw;
+}
+        /*  main section */
