--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -145,3 +145,122 @@ body{
     font-size: 2.5vw;
 }
         /*  main section */
+
+#main_container{
+    margin-left: 10px;
+    margin: 10px;
+}
+#container {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+}
+        
+#left {
+    text-align: center;
+    font-size: 1.3vw;
+    width: 50%;
+    background-image: linear-gradient(to top, #268da3, transparent);
+}
+#left h3{
+    font-size: 2.5vw;
+}
+#MIstats{
+    padding: 1.3vw;
+    color: black;
+    background-color: #ed661f;
+    font-weight: bold;
+    border-radius: 1.1vw;
+}
+        
+#right {
+    width: 50%;
+    padding: 1.1vw 3vw;
+    justify-content: center;
+    background-image: linear-gradient(to top, #268da3, transparent);
+}
+        
+#right h3{
+    color: #000;
+    text-align: center;
+    font-size: 2.5vw;
+}
+#right #form{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1.1vw 1.8vw;
+}
+#right #form label{
+    text-align: center;
+    font-size: 1.4vw;
+    font-weight: bold;
+    margin: 1.1vw;
+}
+        
+#right #form input{
+    border-radius: 0.5vw;
+    border: none;
+    padding: 0.8vw;
+    font-size: 1.0vw;
+    margin: 0.5vw;
+    text-align: center;
+    color: #268da3;
+    background-color: #fff;
+
+}
+#right #form input:focus{
+    outline: none;
+}
+#totals{
+    cursor: pointer;
+    background-color: #fff;
+    color: #268da3;
+    padding: 0.5vw;
+    display: flex;
+    justify-content: space-between;
+}
+#totals:hover{
+    color: black;
+}
+tr th{
+    color: red;
+    font-size: 1.7vw;
+}
+tr td{
+    color: #fff;
+    font-size: 1.9vw;
+}
+.sums{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+#daily,#weekly{
+    height: 35vw;
+    padding: 0.5vw;
+    width: 45%;
+    position: relative;
+    top: 1.1vw;
+    gap: 0.5vw;
+    margin: auto;
+    box-shadow: 1.1vw 1.1vw 2.3vw;
+}
+#daily{
+    text-align: center;
+    background-image: linear-gradient(to top, #268da3, transparent);
+    margin: 0.3vw;
+}
+table {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    font-size: 1.3vw;
+    font-weight: bold;
+}
+td{
+    text-align: center;
+}
+#weekly{
+    background-image: linear-gradient(to top, #268da3, transparent);
+}
