--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -256,7 +256,7 @@ tr td{
     top: 1.1vw;
     gap: 0.5vw;
     margin: auto;
-    box-shadow: 1.1vw 1.1vw 2.3vw;
+    box-shadow: 0.3vw 0.3vw 1.1vw;
 }
 #daily{
     text-align: center;
@@ -275,4 +275,92 @@ td{
 }
 #weekly{
     background-image: linear-gradient(to top, #268da3, transparent);
+}
+
+
+        /*footer section*/
+.footer{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #268da3;
+    
+}
+
+ul{
+    list-style: none;
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer_container{
+   
+    margin: auto;
+    max-width: 1150px;
+}
+
+.cont2{
+    width: 20%;
+    padding: 0 17px;
+}
+
+.cont2 h4{
+    font-size: 1.4vw;
+    margin-bottom: 20px;
+    color: #000;
+    font-weight: 700;
+    position: relative;
+    right: -40px;
+    
+}
+
+.cont2 h4::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -0.3vw;
+    background-color: #ceb736;
+    height: 0.2vw;
+    box-sizing: border-box;
+    width: 3.9vw;
+}
+
+.cont2 ul li:not(:first-child){
+    margin-bottom: 10px;
+
+}
+
+.cont2 ul li a{
+    font-size: 1.5vw;
+    color: #000;
+    text-decoration: none;
+    font-weight: 400;
+    display: block;
+    transition: all 0.5s ease;
+
+}
+
+.cont2 ul li a:hover{
+    color: #000;
+    padding-left: 7px;
+}
+
+.cont2 .icon a{
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    background-color: rgb(255, 255, 255, 0.2);
+    margin: 0 10px 10px 0;
+    text-align: center;
+    line-height: 40px;
+    border-radius: 50%;
+    color: #000;
+    transition: all 0.5s ease;
+}
+
+.cont2 .icon a:hover{
+    color: #24262b;
+    background-color: #ceb736;
 }
