--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -159,7 +159,7 @@ body{
 
 
 
-        /*  main section */
+        /*  main_container section */
 
 #main_container{
     margin-left: 10px;
@@ -239,7 +239,7 @@ body{
     margin-left: 12.4vw;
 }
 #totals:hover{
-    color: black;
+    color: gainsboro;
 }
 tr th{
     color: black;
@@ -249,7 +249,7 @@ tr td{
     color: #fff;
     font-size: 1.9vw;
 }
-.sums{
+.mon{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -295,6 +295,10 @@ td{
 
 ul{
     list-style: none;
+    
+}
+ul li{
+    font-size: 1.5vw;
 }
 .row{
     display: flex;
