--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,16 +30,6 @@ body{
     
     position: relative;
 }
-#header .active::before{
-    content: '';
-    position: absolute;
-    left: 0.6vw;
-    bottom: 0.2vw;
-    background-color: #ceb736;
-    height: 0.2vw;
-    box-sizing: border-box;
-    width: 3.9vw;
-}
 
 #header li{
     display: inline;
@@ -56,7 +46,7 @@ body{
 }
 
 #header li a:hover{
-    color: purple;
+    color: green;
 }
 
 #header ul #contact a{
@@ -107,10 +97,23 @@ body{
     margin-top: 10px;
 }
 #yel{
-    position: relative;
+    position: absolute;
+    top: 7.3vw;
+    font-size: 4.2vw;
+    color: #ceb736;
+    font-family: 'Oleo Script', cursive;
 }
 
-#yel::before{
+#best{
+    position: absolute;
+    top: 20.5vw;
+    font-size: 3.2vw;
+    color: #ceb736;
+    font-family: 'Oleo Script', cursive;
+
+}
+
+/*#yel::before{
     content: '';
     position: absolute;
     bottom: -0.9vw;
@@ -119,7 +122,7 @@ body{
     height: 0.4vw;
     box-sizing: border-box;
     width: 20vw;
-}
+}*/
 
 .photo img{
     width: 100%;
@@ -137,24 +140,25 @@ body{
     text-align: center;
     justify-content: center;
     margin-top: 1.5vw;
-    margin-bottom: 1.5vw;
-    position: relative;
+    margin-bottom: 1.3vw;
+    
 
 }
-#mid::before{
+#mid h3{
+    font-size: 3.5vw;
+    font-family: 'Oleo Script', cursive;
+    position: relative;
+}
+#mid h3::before{
     content: '';
     position: absolute;
-    bottom: -0.9vw;
-    left: 40vw;
+    bottom: -0.2vw;
+    left: 18vw;
     background-color: #ceb736;
-    height: 0.4vw;
+    height: 0.3vw;
     box-sizing: border-box;
     width: 20vw;
-
-}
-
-#mid h3{
-    font-size: 2.5vw;
+    font-weight: 100;
 }
 
 
@@ -170,51 +174,34 @@ body{
     position: relative;
     justify-content: space-between;
 }
-        
-#left {
-    text-align: center;
-    font-size: 1.3vw;
-    width: 50%;
-    background-image: linear-gradient(to top, #268da3, transparent);
-}
-#left h3{
-    font-size: 2.5vw;
-}
-#Rates{
-    padding: 1.1vw;
-    color: #fff;
-    background-color: #ceb736;
-    font-weight: 400;
-    border-radius: 1.4vw;
-    font-size: 1.2vw;
-}
-        
-#right {
+
+
+#milk {
     width: 50%;
     padding: 1.1vw 3vw;
     justify-content: center;
     background-image: linear-gradient(to top, #268da3, transparent);
 }
         
-#right h3{
+#milk h3{
     color: #000;
     text-align: center;
     font-size: 2.5vw;
 }
-#right #form{
+#milk #form{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 1.1vw 1.8vw;
 }
-#right #form label{
+#milk #form label{
     text-align: center;
     font-size: 1.4vw;
     font-weight: bold;
     margin: 1.1vw;
 }
         
-#right #form input{
+#milk #form input{
     border-radius: 0.5vw;
     border: none;
     padding: 0.8vw;
@@ -225,12 +212,36 @@ body{
     background-color: #fff;
 
 }
-#right #form input:focus{
+#milk #form input:focus{
     outline: none;
 }
-#totals{
+        
+#cash {
+    text-align: center;
+    font-size: 1.3vw;
+    width: 50%;
+    background-image: linear-gradient(to top, #268da3, transparent);
+}
+#cash h3{
+    font-size: 2.5vw;
+}
+
+#cash tr td{
+    text-align: left;
+}
+#Rates{
+    padding: 1.1vw;
+    color: #fff;
+    background-color: #95cd9e;
+    font-weight: 400;
+    border-radius: 1.4vw;
+    font-size: 1.2vw;
+}
+        
+
+#total_btn{
     cursor: pointer;
-    background-color: #ceb736;
+    background-color: #95cd9e;
     color: #fff;
     padding: 0.5vw;
     margin-top: 0.8vw;
@@ -238,7 +249,7 @@ body{
     font-size: 1.3vw;
     margin-left: 12.4vw;
 }
-#totals:hover{
+#total_btn:hover{
     color: gainsboro;
 }
 tr th{
@@ -255,7 +266,7 @@ tr td{
     flex-wrap: wrap;
 }
 #daily,#weekly{
-    height: 35vw;
+    height: 29vw;
     padding: 0.5vw;
     width: 45%;
     position: relative;
@@ -286,7 +297,8 @@ td{
 
         /*footer section*/
 .footer{
-    margin: 0;
+    margin-left: 10px;
+    margin-right: 10px;
     padding: 0;
     box-sizing: border-box;
     background-color: #268da3;
@@ -378,13 +390,19 @@ ul li{
 #qual{
     font-size: 1.4vw;
 }
-
+.btn-container{
+    background-color: #268da3;
+}
 .btn{
-    margin-top: 1.1vw;
-    
-    background-color: #ceb736;
+    font-size: 1.3vw;
+    background-color: #95cd9e;
     padding: 1.5vw;
     color: #fff;
     border-radius: 1.1vw;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin-left: 47vw;
+    cursor: pointer;
 
 }
